--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,53 @@ permissions:
   pull-requests: write
 
 jobs:
+  build:
+    name: Build ${{ matrix.platform }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            platform: linux
+            target: x86_64-unknown-linux-gnu
+            binary_name: git-subtree-audit
+            asset_name: git-subtree-audit-linux-x86_64
+          - os: macos-latest
+            platform: macos
+            target: x86_64-apple-darwin
+            binary_name: git-subtree-audit
+            asset_name: git-subtree-audit-macos-x86_64
+          - os: macos-latest
+            platform: macos-arm
+            target: aarch64-apple-darwin
+            binary_name: git-subtree-audit
+            asset_name: git-subtree-audit-macos-arm64
+          - os: windows-latest
+            platform: windows
+            target: x86_64-pc-windows-msvc
+            binary_name: git-subtree-audit.exe
+            asset_name: git-subtree-audit-windows-x86_64.exe
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          target: ${{ matrix.target }}
+
+      - name: Build
+        run: cargo build --release --target ${{ matrix.target }}
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.asset_name }}
+          path: target/${{ matrix.target }}/release/${{ matrix.binary_name }}
+
   release:
     name: Release
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -26,8 +71,10 @@ jobs:
         with:
           node-version: 'lts/*'
 
-      - name: Setup Rust
-        uses: actions-rust-lang/setup-rust-toolchain@v1
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: ./binaries
 
       - name: Install dependencies
         run: |
