--- a/.releaserc.json
+++ b/.releaserc.json
@@ -40,7 +40,8 @@
     [
       "@semantic-release/git",
       {
-        "assets": ["Cargo.toml", "Cargo.lock", "CHANGELOG.md"]
+        "assets": ["Cargo.toml", "Cargo.lock", "CHANGELOG.md"],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ]
   ]
