--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -12,8 +12,11 @@ jobs:
   auto-merge:
     runs-on: ubuntu-latest
     if: github.actor == 'renovate[bot]'
-    
+
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Auto-merge Renovate PR
         run: |
           PR_NUMBER=${{ github.event.pull_request.number }}
